--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,32 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript"]
+  "extends": [
+    "next/core-web-vitals",
+    "plugin:tailwindcss/recommended",
+    "prettier",
+    "plugin:storybook/recommended"
+    // "plugin:@typescript-eslint/recommended"
+  ],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "plugins": ["@typescript-eslint", "@tanstack/query", "simple-import-sort"],
+  "ignorePatterns": ["!.storybook", "storybook-static"],
+  "rules": {
+    "no-console": "warn",
+    "@tanstack/query/exhaustive-deps": "error",
+    "@typescript-eslint/no-explicit-any": "warn",
+    "simple-import-sort/imports": [
+      "error",
+      {
+        "groups": [
+          ["^react.*", "^next.*", "^@?\\w"],
+          ["^@/.*"],
+          ["^(?:../|./)(?!.*.css$).*$"],
+          ["^.+\\.css$"]
+        ]
+      }
+    ]
+  }
 }
