--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
     "lint": "eslint --cache ."
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx}": "eslint --fix"
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --cache --fix",
+      "prettier --cache --write"
+    ],
+    "*.{md,json}": [
+      "prettier --cache --write"
+    ]
   },
   "dependencies": {
     "next": "15.0.2",
