--- a/package.json
+++ b/package.json
@@ -17,13 +17,19 @@
     ]
   },
   "dependencies": {
+    "@gsap/react": "^2.1.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "gsap": "^3.12.5",
     "next": "15.0.2",
     "next-video": "^1.3.3",
     "next-videos": "^1.4.1",
-    "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwind-merge": "^2.5.4",
     "tailwind-scrollbar-hide": "^1.1.7",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.51.10",
